<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/P1"
    android:orientation="vertical"
    tools:context=".Ui.Fragments.AjustesFragment">


    <include
        android:id="@+id/include"
        layout="@layout/header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_top_left"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="30dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/idioma"
                    android:textColor="@color/P1"
                    android:id="@+id/tvIdioma"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/btnEspa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/espa_ol" />

                    <RadioButton
                        android:id="@+id/btnEngli"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/english" />
                </RadioGroup>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/tvTema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tema"
                    android:textColor="@color/P1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/btnClaro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvClaro" />

                    <RadioButton
                        android:id="@+id/btnOscuro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tvOscuro" />
                </RadioGroup>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</LinearLayout>